grammar.ebnf
# not turing complete (yet!)
START = block END

block = (call SEP). call
call  = (call expr) | expr

expr  = '{' + block + '}'
      | '(' + call  + ')'
      | op

op = assignment

assignment = SYMBOL '=' call
           | function

function = SYMBOL '->' expr

literal = SYMBOL
        | number
        | STRING
        | BOOLEAN

number = REAL
